# noten

./: .gitignore  INSTALLATION.md  README.md  RUN_DEMO.sh  demo_real_llm.py  demo_reharmonization.py  noten_desc.md  pyproject.toml  test_chord_extensions.py  test_coverage.py  test_examples.py  test_noten.py  test_rhythm_continuation.py
examples/: complex_rhythms.noten  jazz_standard.noten  parenthesized_extensions.noten  pop_song.noten  rhythm_analysis_demo.py
src/noten/: __init__.py  noten_lexer.py  noten_parser.py  noten_rhythm.py
